chore: update repo references from semantic-commons to carapace

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github-personal:Morpheis/semantic-commons.git"
+    "url": "git@github-personal:Morpheis/carapace.git"
   },
   "keywords": [
     "ai-agents",
